# APRG

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  monitor_memory.sh
.devcontainer/: devcontainer.json
config/: config_sample.json  icl_living_room.json  icl_office.json  tum_cabinet.json  tum_desk.json  tum_long_office.json  tum_pioneer.json
data/sample_data/ICL/icl-living-room_cc/: scene_00_0001.depth  scene_00_0005.depth  scene_00_0010.depth  scene_00_0012.depth
data/sample_data/ICL/icl-living-room_cc/living_room_traj0_loop/: scene_00_0002.depth  scene_00_0003.depth  scene_00_0004.depth  scene_00_0006.depth  scene_00_0007.depth  scene_00_0008.depth  scene_00_0009.depth  scene_00_0011.depth  scene_00_0013.depth
data/sample_data/TUM/full_tum_desk/: log_time.txt
include/: EVOPS_data_tools.hpp  HPS.h  HirachicalIndex.h  Params.h  PatchSegmentResult.h  PatchSegmentStatus.h  PlaneSeg.h  PointsInfoPyramid.h  PointsSamplePyramid.h  PointsSumPyramid.h  SegStatePyramid.h  itodd_data_tools.hpp  utils.h
include/rapidjson/: allocators.h  document.h  encodings.h  rapidjson.h  reader.h
include/rapidjson/internal/: stack.h  strfunc.h
params/: params-icl-living-room.json  params-icl-office.json  params-tum-cabinet.json  params-tum-desk.json  params-tum-long-office.json  params-tum-pioneer-slam.json
scripts/: convert_to_pointcloud.py  plane_segmentation.py  utils.py
src/: HPS.cpp  HirachicalIndex.cpp  PatchSegmentResult.cpp  PatchSegmentStatus.cpp  PlaneSeg.cpp  PointsInfoPyramid.cpp  PointsSamplePyramid.cpp  PointsSumPyramid.cpp  SegStatePyramid.cpp  run_EVOPS.cpp  run_EVOPS_Real.cpp  run_EVOPS_Syn.cpp  run_itodd.cpp  run_simple_test.cpp  utils.cpp
